// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Should render correctly 1`] = `
<div>
  <button
    class="button__outer button__outer--regular button__outer--no-bouncy"
    type="button"
  />
</div>
`;

exports[`<Button /> Should render correctly hrefExternal 1`] = `
<div>
  <a
    href="https://duckduckgo.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <button
      aria-hidden="true"
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--link"
      type="button"
    />
  </a>
</div>
`;

exports[`<Button /> Should render correctly with custom className 1`] = `
<div>
  <button
    class="button__outer button__outer--regular button__outer--no-bouncy test-custom-classname"
    type="button"
  />
</div>
`;

exports[`<Button /> Should render with nextified href 1`] = `
<div>
  <button
    class="button__outer button__outer--regular button__outer--no-bouncy"
    type="button"
  />
</div>
`;
